# EpiCube

./: CMakeLists.txt  CubeState.py  README.md  main.py
core/: Algorithm.py  CubeState.py
src/: CMakeLists.txt  algorithm.hpp  coordinate.hpp  cubie.hpp  cubie_cube.hpp  move.hpp  move_table.hpp  multistep.hpp  node.hpp  option.hpp  pruning_table.hpp  search.hpp  step_node.hpp  symmetry.hpp  utils.hpp
test/: CMakeLists.txt  algorithm_test.cpp  coordinate_test.cpp  cubie_cube_test.cpp  multistep_test.cpp  pruning_table_test.cpp  search_test.cpp  symmetry_test.cpp  timing_alg_application.py
